
[project]
name = "budget"
version = "0.1.0"
description = "Small budgeting utilities and CLI for personal finance."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Joshua Bone", email = "jbone.data@gmail.com" }
]
keywords = ["budget", "finance", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "tabulate",
    "flask",
    "gunicorn",
    "pandas",
]

[project.scripts]
budget = "budget.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
